--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 		<div class="col-xs-12">
 			<p class="jumbotron">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus maiores, ipsa veniam. Sint corrupti aspernatur temporibus repellat, aliquid cupiditate quos! Nemo nobis animi ratione voluptas fugit tempore consequuntur voluptate quidem.
 			<br><button type="button" class="btn btn-primary">Leer Mas</button>
-			</p>
-            
+			</p>      
 		</div>
+		<div class="col-xs-12 col-md-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis mollitia optio distinctio quasi, possimus cumque. Omnis, voluptatum pariatur accusamus ut incidunt, itaque sunt vel consequatur cumque, quasi mollitia necessitatibus iure.</div>
+		<div class="col-xs-12 col-md-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus magnam nemo consequuntur consectetur quaerat, corporis ab laborum deserunt eligendi laudantium soluta animi iste. Explicabo sit minus fuga, ipsa a nemo.</div>
+		<div class="col-xs-12 col-md-3 col-md-offset-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae delectus, asperiores reiciendis saepe tenetur, quibusdam modi tempore iste. Atque dicta obcaecati vel pariatur. Quae, pariatur labore nam reprehenderit at quasi!</div>
 	</div>
 </div>
 	
