--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
 		<div class="col-xs-12 col-md-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis mollitia optio distinctio quasi, possimus cumque. Omnis, voluptatum pariatur accusamus ut incidunt, itaque sunt vel consequatur cumque, quasi mollitia necessitatibus iure.</div>
 		<div class="col-xs-12 col-md-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus magnam nemo consequuntur consectetur quaerat, corporis ab laborum deserunt eligendi laudantium soluta animi iste. Explicabo sit minus fuga, ipsa a nemo.</div>
 		<div class="col-xs-12 col-md-3 col-md-offset-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae delectus, asperiores reiciendis saepe tenetur, quibusdam modi tempore iste. Atque dicta obcaecati vel pariatur. Quae, pariatur labore nam reprehenderit at quasi!</div>
+
+		<div class="col-xs-12">
+			<button type="button" class="btn btn-primary">Principal</button>
+			<button type="button" class="btn btn-info">Informativo</button>
+			<button type="button" class="btn btn-danger">Peligro</button>
+		</div>
 	</div>
 </div>
 	
