con lista de elementos

--- a/index.html
+++ b/index.html
@@ -1,34 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<title>Aprendiendo Bootstrap</title>
-	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<link rel="stylesheet" href="css/bootstrap.min.css">
+    <meta charset="UTF-8">
+    <title>Aprendiendo Bootstrap</title>
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
+
 <body>
-<div class="container">
-	<div class="row">
-		<div class="col-xs-12">
-			<p class="jumbotron">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus maiores, ipsa veniam. Sint corrupti aspernatur temporibus repellat, aliquid cupiditate quos! Nemo nobis animi ratione voluptas fugit tempore consequuntur voluptate quidem.
-			<br><button type="button" class="btn btn-primary">Leer Mas</button>
-			</p>      
-		</div>
-		<div class="col-xs-12 col-md-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis mollitia optio distinctio quasi, possimus cumque. Omnis, voluptatum pariatur accusamus ut incidunt, itaque sunt vel consequatur cumque, quasi mollitia necessitatibus iure.</div>
-		<div class="col-xs-12 col-md-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus magnam nemo consequuntur consectetur quaerat, corporis ab laborum deserunt eligendi laudantium soluta animi iste. Explicabo sit minus fuga, ipsa a nemo.</div>
-		<div class="col-xs-12 col-md-3 col-md-offset-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae delectus, asperiores reiciendis saepe tenetur, quibusdam modi tempore iste. Atque dicta obcaecati vel pariatur. Quae, pariatur labore nam reprehenderit at quasi!</div>
-
-		<div class="col-xs-12">
-			<button type="button" class="btn btn-primary">Principal</button>
-			<button type="button" class="btn btn-info">Informativo</button>
-			<button type="button" class="btn btn-danger">Peligro</button>
-		</div>
-	</div>
-</div>
-	
-
-
-	<script src="js/jquery-1.11.3.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <p class="jumbotron">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus maiores, ipsa veniam. Sint corrupti aspernatur temporibus repellat, aliquid cupiditate quos! Nemo nobis animi ratione voluptas fugit tempore consequuntur voluptate quidem.
+                    <br>
+                    <button type="button" class="btn btn-primary">Leer Mas</button>
+                </p>
+            </div>
+            <div class="col-xs-12 col-md-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis mollitia optio distinctio quasi, possimus cumque. Omnis, voluptatum pariatur accusamus ut incidunt, itaque sunt vel consequatur cumque, quasi mollitia necessitatibus iure.</div>
+            <div class="col-xs-12 col-md-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus magnam nemo consequuntur consectetur quaerat, corporis ab laborum deserunt eligendi laudantium soluta animi iste. Explicabo sit minus fuga, ipsa a nemo.</div>
+            <div class="col-xs-12 col-md-3 col-md-offset-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae delectus, asperiores reiciendis saepe tenetur, quibusdam modi tempore iste. Atque dicta obcaecati vel pariatur. Quae, pariatur labore nam reprehenderit at quasi!</div>
+            <div class="col-xs-12">
+                <button type="button" class="btn btn-primary">Principal</button>
+                <button type="button" class="btn btn-info">Informativo</button>
+                <button type="button" class="btn btn-danger">Peligro</button>
+            </div>
+            <div class="col-xs-12 col-md-4">
+                <div class="list-group">
+                    <a href="#" class="list-group-item">item #1</a>
+                    <a href="#" class="list-group-item active">item #2</a>
+                    <a href="#" class="list-group-item">item #3</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="js/jquery-1.11.3.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 </body>
+
 </html>
