--- a/index.html
+++ b/index.html
@@ -23,6 +23,23 @@
 			<button type="button" class="btn btn-info">Informativo</button>
 			<button type="button" class="btn btn-danger">Peligro</button>
 		</div>
+
+		<div class="col-xs-12">
+			<ul class="pagination pagination-lg">
+				<li class="disabled"><span>&laquo;</span></li>
+				<li class="active"><span>1</span></li>
+				<li><a href="#">2</a></li>
+				<li><a href="#">3</a></li>
+				<li><a href="#">4</a></li>
+				<li><a href="#">5</a></li>
+				<li><a href="#">6</a></li>
+				<li><a href="#">7</a></li>
+				<li><a href="#">8</a></li>
+				<li><a href="#">9</a></li>
+				<li><a href="#">10</a></li>
+				<li><a href="#">&raquo;</a></li>
+			</ul>
+		</div>
 	</div>
 </div>
 	
