--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
                     <a href="#" class="list-group-item">item #3</a>
                 </div>
             </div>
+            <div class="col-xs-12 col-md-6">
+            	<ul class="breadcrumb">
+            		<li class="active">Inicio</li>
+            		<li><a href="#">Tutoriales</a></li>
+            		<li><a href="#">Programacion</a></li>
+            		<li><a href="#">Android</a></li>
+            	</ul>
+            </div>
         </div>
     </div>
     <script src="js/jquery-1.11.3.min.js"></script>
