--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
             		<li><a href="#">Android</a></li>
             	</ul>
             </div>
+			
+			<div class="col-xs-12">
+			   <p>este contenido es hecho por jose y no lo toques 
+			    <a href="#">visita mi pagina </a>
+			   </p>
+			</div>
 	</div>
 </div>
 	
