datos de jose 2

--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
 			    <a href="#">visita mi pagina </a>
 			   </p>
 			</div>
+			
+			<div class="col-xs-12">
+			  <h2>Jose- Visitando a google - chromecast sede</h2>
+			</div>
 	</div>
 </div>
 	
