avance de lucia

--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
 			<div class="col-xs-12">
 			  <h2>Jose- Visitando a google - chromecast sede</h2>
 			</div>
+			
+			<p class="jumbotron"> Alguien se esta olvidando de lucia</p>
+			<h3>Para que todos me vean , uso esto</h3>
 	</div>
 </div>
 	
