--- a/index.html
+++ b/index.html
@@ -68,9 +68,18 @@
 			<div class="col-xs-12">
 			  <h2>Jose- Visitando a google - chromecast sede</h2>
 			</div>
-			
+			 
+			 <div class="col-xs-12 col-md-6">
 			<p class="jumbotron"> Alguien se esta olvidando de lucia</p>
 			<h3>Para que todos me vean , uso esto</h3>
+			
+			<form class="especial" id="luciaform" method="post" action="index.html">		     
+			   <div class="form-group">
+			    <input placeholder="escribe lo que vas a buscar" class="form-control" type="text" name="q">
+			   </div>
+			   <button class="btn btn-primary" type="submit">Enviar</button>
+			</form>
+			</div>
 	</div>
 </div>
 	
